[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/2kui/2kui.tres" type="Theme" id=1]
[ext_resource path="res://src/VoxelMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/water.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/runtime/game.gd" type="Script" id=5]

[node name="Game" type="Spatial"]
script = ExtResource( 5 )
online = true
use_web_sockets = true

[node name="LoadingScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="LoadingScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -309.0
margin_top = -117.0
margin_right = -19.0
margin_bottom = -20.0

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 49.0
margin_right = -8.0
margin_bottom = -8.0
max_value = 4.0
percent_visible = false

[node name="Label" type="Label" parent="LoadingScreen/Panel"]
margin_left = 8.0
margin_top = 6.0
margin_right = 57.0
margin_bottom = 46.0
text = "Loading"
valign = 1

[node name="Hud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Menu" type="WindowDialog" parent="Hud"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.5
margin_top = -137.0
margin_right = 208.5
margin_bottom = 137.0
window_title = "menu"

[node name="Tree" type="Tree" parent="Hud/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_right = -132.0

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/Menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.0
margin_top = 7.0
margin_right = -3.0

[node name="Button" type="Button" parent="Hud/Menu/VBoxContainer"]
margin_right = 123.0
margin_bottom = 29.0
text = "play"

[node name="Button2" type="Button" parent="Hud/Menu/VBoxContainer"]
margin_top = 33.0
margin_right = 123.0
margin_bottom = 62.0
text = "exit game"

[node name="MenuButton" type="Button" parent="Hud"]
margin_left = 9.0
margin_top = 6.0
margin_right = 66.0
margin_bottom = 38.0
focus_mode = 0
enabled_focus_mode = 0
text = "menu"

[node name="Chatbox" type="RichTextLabel" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 122.0
margin_right = 286.0
margin_bottom = -46.0
theme = ExtResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="ChatEntry" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -42.0
margin_right = 278.0
margin_bottom = -10.0
theme = ExtResource( 1 )
placeholder_text = "Click to chat"

[node name="Water" parent="." instance=ExtResource( 3 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 5.63565, 0 )
light_bake_mode = 0
shadow_enabled = true
shadow_reverse_cull_face = true

[node name="VoxelMesh" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Hud/Menu/VBoxContainer/Button" to="." method="_resume"]
[connection signal="pressed" from="Hud/Menu/VBoxContainer/Button" to="." method="_join_game" flags=6]
[connection signal="pressed" from="Hud/Menu/VBoxContainer/Button2" to="." method="_exit_game"]
[connection signal="pressed" from="Hud/MenuButton" to="." method="menu_button"]
[connection signal="text_entered" from="ChatEntry" to="." method="_on_chat_entry_entered"]
